[package]
name = "rust-mazes"
version = "0.1.0"
authors = ["Oleksandr Podze <dasdeg@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
image = "0.24.6"
num-complex = "0.4.3"
rand = "0.8.3"
imageproc = "0.23.0"
gdk-pixbuf = "0.17.0"
cairo-rs = "0.17.0"
gio = "0.17.9"

[dependencies.gtk]
version = "0.17.0"



