[package]
name = "rust-mazes"
version = "0.1.0"
authors = ["Oleksandr Podze <dasdeg@gmail.com>"]
edition = "2024"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
image = "0.25.5"
num-complex = "0.4.6"
rand = "0.9.0"
imageproc = "0.25.0"
gdk-pixbuf = "0.20.9"
cairo-rs = "0.20.7"
gio = "0.20.9"

[dependencies.gtk]
version = "0.18.2"



